<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">iCloudTelecom</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="config_error_text">读取配置账号信息错误，请核对后重新输入</string>
    <string name="im_btn_text">IM Demo</string>
    <string name="rest_btn_text">Rest Demo</string>
    <string name="voip_btn_text">VoIP Demo</string>
    <string name="guide_title_text">导航</string>
    <string name="guide_input_hint">请输入主账号</string>
    <string name="guide_token_hint">请输入令牌</string>
    <string name="guide_appid_hint">请输入应用ID</string>
    <string name="guide_nikename_hint">请输入别名</string>
    <string name="guide_explain_text">使用说明</string>
    <string name="account_offline_notify">下线通知</string>
	<string name="ccp_http_err" formatted="false">与云通讯服务器断开连接,请检查你的网络或稍后重试</string>
    <string name="ccp_http_connect">已连接到云通讯服务器</string>
    <string name="voip_btn_accept_text">接受</string>
    <string name="voip_btn_reject_text">拒绝</string>
    <string name="voip_btn_back_text">回拨呼叫</string>
    <string name="voip_btn_voice_text">语音留言</string>
    <string name="voip_btn_voip_text">免费电话</string>
    <string name="voip_btn_direct_text">电话直拨</string>
    <string name="voip_talk_dsp_text">请呼叫</string>
    <string name="voip_unknown_user">未知联系人</string>
    <string name="voip_unknown_num">未知号码</string>
    <string name="voip_calling_finish">通话结束</string>
    <string name="no_support_voip">呼叫失败或者对方不在线！</string>
    <string name="voip_calling_wait">等待对方接听&#8230;</string>
    <string name="voip_calling_timeout">无人应答,呼叫超时</string>
    <string name="voip_call_fail">呼叫失败，请稍后重试&#8230;</string>
    <string name="voip_calling_network_instability">对方不在线或者网络不给力,请直呼</string>
    <string name="voip_call_back_success">回拨呼叫成功，请注意接听系统来电!</string>
    <string name="voip_call_connect">正在呼叫对方，请稍后&#8230;</string>
    <string name="voip_call_back_connect">正在呼叫，请稍后&#8230;</string>
    <string name="voip_calling_refuse">对方拒接，请稍后再试</string>
    <string name="voip_call_fail_no_cash">呼叫失败，请查询余额</string>
    <string name="notification_calling_title">VoIP通话</string>
    <string name="notification_calling_content">VoIP通话界面请点击这里</string>
    <string name="toast_call_phone_error">您手机的拨号权限受到限制，请打开</string>
    <string name="edit_input_empty">您的输入为空!</string>
    <string name="toast_invite_group_empty">您未选择任何联系人,请返回重新选择</string>
    <string name="network_dial_number_format">请输入正确的手机号或带有区号的座机电话。</string>
    <string name="voip_number_format">请输入正确的VoIP账号。</string>
    <string name="main_account_empty">主账号为空!</string>
    <string name="main_token_empty">主账号令牌为空!</string>
    <string name="appid_empty">应用ID为空!</string>
    <string name="nickname_empty">别名为空!</string>
    <string name="phone_empty">手机号码为空!</string>
    <string name="show_account_title">账号信息</string>
    <string name="main_account_title_text">主账号:</string>
    <string name="main_token_title_text">主账号令牌:</string>
    <string name="sub_account_title_text">子账号：%s</string>
    <string name="sub_token_title_text">令牌：%s</string>
    <string name="voip_code_title_text">VoIP账号:</string>
    <string name="voip_pwd_title_text">VoIP密码：%s</string>
    <string name="main_account_hint_text">请从网站的账号信息中获取主账号</string>
    <string name="main_token_hint_text">请从网站的账号信息中获取主账号令牌</string>
    <string name="sub_account_hint_text">请从网站的DEMO管理中获取子账号</string>
    <string name="sub_token_hint_text">请从网站的DEMO管理中获取子账号令牌</string>
    <string name="voip_code_hint_text">请从网站的DEMO管理中获取VoIP账号</string>
    <string name="voip_pwd_hint_text">请从网站的DEMO管理中获取VoIP账号密码</string>
    <string name="next_btn_text">下一步</string>
    <string name="dialog_btn">确定</string>
    <string name="dialog_cancle_btn">取消</string>
    <string name="input_info_title">输入信息</string>
    <string name="app_title_person_info">个人信息</string>
    <string name="str_voip_regist">注册</string>
    <string name="src_phone_empty">本机号码为空</string>
    <string name="select_title_text">选择</string>
    <string name="select_input_hint_text">请输入被叫手机号或对方VoIP帐号</string>
    <string name="help_title_text">帮助</string>
    <string name="dialog_message_text">正在登录演示平台,请稍候...</string>
    <string name="log_regist_failed_text">初始化错误...</string>
    <string name="log_regist_success_text">注册成功...</string>
    <string name="voip_btn_select_voip_text">VoIP演示</string>
    <string name="voip_btn_select_intercom_text">实时对讲演示</string>
    <string name="voip_btn_delay_voice_text">语音留言演示</string>
    <string name="app_title_voice_select">演示选择</string>
    <string name="app_title_delay_voice">语音留言首页</string>
    <string name="btn_clear_all_text">清空</string>
    <string name="create_new_voice">创建会话</string>
    <string name="btn_title_back">返回</string>
    <string name="voice_chat_recode_start">按住 说话</string>
    <string name="voice_chat_recode_finish">松开 结束</string>
	<string name="toast_recode_is_to_short">时间太短   录音失败</string>
	<string name="ccp_sdk_init_str">CCPCall.init() already called.</string>
	<string name="toast_voice_send_success">语音发送成功</string>
	<string name="voice_cancel_rcd">手指上滑，取消发送</string>
	<string name="voice_cancel_rcd_release">松开手指，取消发送</string>
	<string name="notifycation_new_message_recive">发来一条新IM消息</string>
	<string name="notifycation_new_message_title">新IM消息</string>
	<string name="notifycation_new_inter_phone_title">新实时对讲通知</string>
	<string name="str_select_voip_account_hit">选择VoIP帐号登录之后即可体验相关能力</string>
	<string name="str_select_voip_account">请选择VoIP帐号:</string>
	<string name="str_login">登录</string>
	<string name="str_select_voip_list">选中VoIP帐号的基本信息:</string>
	<string name="str_click_into_interphone">点击即可加入实时对讲</string>
	<string name="str_top_notice_tips_invite">已邀请<xliff:g id="COUNT">%s</xliff:g>\t人参与,等待对方加入...</string>
	<string name="str_voice_room_bottom1">长按麦克风开始抢麦</string>
	<string name="str_voice_room_bottom2">抢麦成功会有振动反馈即可开始说话</string>
	<string name="str_voice_room_bottom3">失败则需要重新抢</string>
	<string name="str_voice_room_bottom4">其实...等TA说完再按就不用抢了嘛...</string>
	<string name="str_interphone_str">对讲机</string>
	<string name="str_quit">退出</string>
	<string name="str_join_wait">等待加入</string>
	<string name="str_join_success">已加入</string>
	<string name="str_join_speaking">已加入,正在说话中...</string>
	<string name="str_join_quit">已退出</string>
	<string name="str_check_participants">请勾选本次对讲参与者(可多选)</string>
	<string name="str_not_check_participants">还未勾选参与者,请勾选</string>
	<string name="str_check_participants_voip_call">请勾选本次VoIP通话参与者(单选)</string>
	<string name="str_check_to_participants">点击开始实时对讲吧</string>
	<string name="str_check_to_participants_voip_call">点击开始呼叫吧</string>
	<string name="str_begin_to_interphone">开始对讲</string>
	<string name="str_add_number_to_list">添加</string>
	<string name="str_title_select_join_member">选择参与者</string>
	<string name="str_btn_launch_talkback">发起对讲</string>
	<string name="str_has_select_account_info">已选中帐号的信息</string>
	<string name="str_join_inter_phone_failed" formatted="false">加入实时对讲失败！(%d)</string>
	<string name="str_join_inter_phone_success">\t已加入实时对讲</string>
	<string name="str_quit_inter_phone">\t已退出实时对讲</string>
	<string name="str_control_mic_success">您已抢麦成功，可以开始说话</string>
	<string name="str_control_mic_failed">抢麦失败，请稍后重试！</string>
	<string name="str_invite_join_inter">%s\t邀请您参与对讲...</string>
	<string name="str_speaking">\t正在说话...</string>
	<string name="str_can_control_mic">现在可以开始抢麦对讲了</string>
	<string name="str_regist_again">长时间未登录,请重新注册...</string>
	<string name="str_dialog_title">提示</string>
	<string name="str_dialog_message_default">处理中,请稍候...</string>
	<string name="str_dialog_message">该功能暂不开放,请联系云通讯客服人员...</string>
	<string name="str_notifycation_inter_phone">收到一个新的实时对讲邀请</string>
	<string name="str_notifycation_inter_phone_clear">%s解散了</string>
	<string name="str_inter_phone_room_title">在%s对讲</string>
	<string name="str_video_call_begin">开始视频通话</string>
	<string name="str_video_call_stop">结束视频通话</string>
	<string name="str_video_btn_call_end">结束</string>
	<string name="app_title_video">视频通话</string>
	<string name="str_tips_wait_invited">正在等待对方接受邀请...</string>
	<string name="str_tips_video_nvited">请选择本次视频通话的参与者（单选）</string>
	<string name="str_check_to_participants_video_call">点击开始视频呼叫吧</string>
	<string name="str_video_bottom_time" formatted="false">与%1$s视频通话中\t</string>
	<string name="str_call_status" formatted="false">丢包率:%d\n延时:%d/ms</string>
	<string name="str_video_call_end">%1$s挂断了本次视频通话,视频通话结束..</string>
	<string name="str_video_invited_recivie">%1$s邀请您进行视频通话...</string>
    <string name="str_market_head_note_text">请输入1个或多个需要外呼的号码</string>
    <string name="str_phonenum_input_hint">手机号/固号（加区号）</string>
	<string name="str_market_bottom_note_text">上述号码接听后即可听到预设的语音</string>
	<string name="str_button_str_outbound">开始外呼</string>
	<string name="str_market_head_text">营销外呼</string>
	<string name="Toast_market_phone_empty_text">提示：号码不能为空</string>
	<string name="str_market_state_answer_success">已成功接听</string>
	<string name="str_market_state_other_busy">对方忙</string>
	<string name="str_market_state_calling">正在呼叫</string>
	<string name="str_market_state_call_wait">等待呼叫</string>
	<string name="str_state_success_listen">已成功接听</string>
	<string name="str_state_busy">对方忙</string>
	<string name="str_state_calling">正在呼叫</string>
	<string name="str_state_wait_for_call">等待呼叫</string>
	<string name="str_state_head_note">正在处理您提交的%d个号码</string>
	<string name="str_market_state_head_text">营销外呼结果</string>
	<string name="str_voice_vericode_top_tips">请输入要接收语音验证码的号码</string>
	<string name="str_recive_number_input">号码(固号加区号)：</string>
	<string name="str_code_title">验证码</string>
	<string name="str_code_submit">提交</string>
	<string name="app_title_veri_code">语音验证码</string>
	<string name="app_title_veri_status">验证状态</string>
	<string name="str_chatroom_name">房间名称</string>
	<string name="str_chatroom_name_input_hit">请输入群聊房间名称</string>
	<string name="str_button_create_chatroom">创建</string>
	<string name="str_click_into_chatroom">点击即可加入语音群聊房间</string>
	<string name="camera_alert">Device has only one camera!</string>
	<string name="dialog_alert_close">关闭</string>
	<string name="camera_switch_front">切换至前置摄像头</string>
	<string name="camera_switch_back">切换至后置摄像头</string>
	<string name="str_net_phone_talk_mode">请选择通话方式</string>
	<string name="str_top_voip_call_tips">您可以呼叫别人也可以让别人呼叫您</string>
	<string name="str_top_landing_call_tips">请输入被叫号码并选择落地呼叫方式</string>
	<string name="app_title_voip">VoIP网络语音电话</string>
	<string name="app_title_landingcall">落地电话</string>
	<string name="str_get_verify_code">获取语音验证码</string>
	<string name="str_verify_code_timer">%d秒后重新获取</string>
	<string name="str_verify_status_success">验证成功</string>
	<string name="str_verify_status_failed">验证失败</string>
	<string name="str_verify_status_success_tips">您输入的验证码与系统生成的一致,完成验证</string>
	<string name="str_verify_status_failed_tips">验证密码不正确,请按以下提示操作:</string>
	<string name="dialog_verify_message_text">语音验证码验证中,请稍候...</string>
	<string name="str_chatroom_list_join_unfull" formatted="false">%1$s人加入,由%2$s创建</string>
	<string name="str_chatroom_list_join_full" formatted="false">%1$s人加入(已满),由%2$s创建</string>
	<string name="str_join_chatroom_success">\t已加入语音群聊</string>
	<string name="str_join_chatroom_failed" formatted="false">加入语音群聊失败(%d)</string>
	<string name="app_title_default">%s的房间</string>
	<string name="app_title_chatroom_conv">语音群聊演示</string>
	<string name="app_title_chatroom_create">创建语音房间</string>
	<string name="app_title_right_button">邀请</string>
	<string name="dialog_title_invite">接听电话加入群聊</string>
	<string name="dialog_title_summary">请输入要邀请加入语音会议的电话号码（固号需加拨区号），对方将接到一个电话，接通后即可加入会议</string>
	<string name="str_invite_join_room" formatted="false">%1$s正在邀请%2$s加入房间</string>
	<string name="str_chatroom_join">%s加入房间</string>
	<string name="str_chatroom_kick">%s被踢出房间</string>
	<string name="str_chatroom_exit">%s退出房间</string>
	<string name="toast_invite_join_room_success">邀请发送成功,请等待对方同意</string>
</resources>