<?xml version="1.0" encoding="utf-8"?>
<!-- 
   Copyright (c) 2013 The CCP project authors. All Rights Reserved.
 
   Use of this source code is governed by a Beijing Speedtong Information Technology Co.,Ltd license
   that can be found in the LICENSE file in the root of the web site.
 
    				http://www.cloopen.com
 
   An additional intellectual property rights grant can be found
   in the file PATENTS.  All contributing project authors may
   be found in the AUTHORS file in the root of the source tree.
 -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_horizontal"
    android:background="#466692" >

    <LinearLayout
        android:id="@+id/head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="4.0dip"
        android:orientation="horizontal"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10.0dip"
        android:layout_marginLeft="20.0dip"
        android:layout_marginRight="20.0dip" >

    </LinearLayout>

    <ImageView
        android:id="@+id/logo_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/head"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="32.0dip"
        android:layout_marginRight="32.0dip"
        android:layout_marginBottom="32.0dip"
        android:layout_marginTop="15.0dip"
        android:src="@drawable/voice_logo" />

    <LinearLayout
        android:id="@+id/ly_account_content"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/btn_login"
        android:layout_below="@+id/logo_icon"
        android:layout_marginTop="-25.0dip"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingBottom="4.0dip"
        android:paddingLeft="20.0dip"
        android:paddingRight="20.0dip" >

        <TextView
            style="@style/VoiceAccountTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3.0dip"
            android:text="@string/main_account_title_text"
            android:textColor="@android:color/white" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="84.0dip"
            android:background="@drawable/voice_login_input_bg"
            android:orientation="vertical"
            android:paddingLeft="4.0dip" >

            <EditText
                android:id="@+id/main_account"
                style="@style/VoiceAccountTitleValue"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:enabled="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:minHeight="42.0dip"
                android:singleLine="true" />

            <EditText
                android:id="@+id/main_token"
                style="@style/VoiceAccountTitleValue"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:enabled="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:minHeight="42.0dip"
                android:singleLine="true" />
        </LinearLayout>

        <TextView
            style="@style/VoiceAccountTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip"
            android:padding="3.0dip"
            android:text="@string/str_select_voip_account"
            android:textColor="@android:color/white" />

        <LinearLayout
            android:id="@+id/voip_ly"
            android:layout_width="fill_parent"
            android:layout_height="42.0dip"
            android:orientation="horizontal"
            android:background="@drawable/voice_login_select"
            android:paddingLeft="4.0dip" >

            <TextView
                android:id="@+id/voip_account"
                style="@style/VoiceAccountTitleValue"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="center_vertical"
                android:minHeight="42.0dip"
                android:singleLine="true" />

            <ImageButton
                android:id="@+id/btn_select_voip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="-36.0dip"
                android:background="@null"
                android:minHeight="45.0dip"
                android:minWidth="40.0dip"
                android:src="@drawable/drop_down_button" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/id_list_ly"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5.0dip"
            android:background="@drawable/voice_login_id_list_bg"
            android:minHeight="90.0dip"
            android:orientation="vertical"
            android:visibility="invisible" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3.0dip"
                android:paddingLeft="3.0dip"
                android:singleLine="true"
                android:text="@string/str_has_select_account_info"
                android:textColor="@android:color/white"
                android:textSize="13.0sp" />

            <TextView
                android:id="@+id/sub_account"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3.0dip"
                android:paddingLeft="10.0dip"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:textSize="13.0sp" />

            <TextView
                android:id="@+id/sub_token"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3.0dip"
                android:paddingLeft="10.0dip"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:textSize="13.0sp" />

            <TextView
                android:id="@+id/voip_token"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3.0dip"
                android:paddingLeft="10.0dip"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:textSize="13.0sp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20.0dip"
        android:layout_marginLeft="20.0dip"
        android:layout_marginRight="20.0dip"
        android:layout_marginTop="3.0dip"
        android:background="@drawable/voice_login_button_selector"
        android:text="@string/str_login"
        android:textColor="@android:color/white"
        android:textSize="20.0sp" />

    <TextView
        android:id="@+id/bottom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:paddingBottom="15.0dip"
        android:text="@string/str_select_voip_account_hit"
        android:textColor="#1D324D" />

</RelativeLayout>